--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>🏃‍♂️‍➡️ Run Goal — цель на год, план на неделю</title>
-  <meta name="description" content="Telegram-бот для бегунов: ставьте годовую цель, ведите журнал тренировок, получайте план на неделю и достигайте цели к концу года.">
+  <meta name="description" content="Telegram-бот для бегунов: ставь годовую цель, веди журнал тренировок, получай план на неделю и достигай цели к концу года.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -26,18 +26,18 @@
         <ol class="steps">
           <li class="step">
             <span class="step__num">1</span>
-            <h3 class="step__title">Запустите бота <a href="https://t.me/RunGoalBot" target="_blank" rel="noopener">@RunGoalBot</a></h3>
-            <p class="step__text">Если у вас есть Telegram, дополнительная регистрация не нужна.</p>
+            <h3 class="step__title">Запусти бота <a href="https://t.me/RunGoalBot" target="_blank" rel="noopener">@RunGoalBot</a></h3>
+            <p class="step__text">Если у тебя есть Telegram, дополнительная регистрация не нужна.</p>
           </li>
           <li class="step">
             <span class="step__num">2</span>
             <h3 class="step__title">Поставь цель</h3>
-            <p class="step__text">Укажите годовую цель в километрах. Например для регулярного участия в массовом забеге на 10 км я ставлю годовую цель 600 км.</p>
+            <p class="step__text">Укажи годовую цель в километрах. Например для регулярного участия в массовом забеге на 10 км я ставлю годовую цель 600 км.</p>
           </li>
           <li class="step">
             <span class="step__num">3</span>
-            <h3 class="step__title">Вносите тренировки и следите за прогрессом</h3>
-            <p class="step__text">Отмечайте выполненное в боте. При срывах план пересчитается так, чтобы к концу года всё равно прийти к цели.</p>
+            <h3 class="step__title">Вноси тренировки и следи за прогрессом</h3>
+            <p class="step__text">Отмечай выполненное в боте. При срывах план пересчитается так, чтобы к концу года всё равно прийти к цели.</p>
           </li>
         </ol>
         <p class="how__cta-wrap">
@@ -68,16 +68,16 @@
 
     <section class="section features" id="features">
       <div class="container">
-        <h2 class="section__title">Что вы получаете</h2>
+        <h2 class="section__title">Что ты получаешь</h2>
         <ul class="features__list">
-          <li><strong>Цель на год</strong> — задаёте один раз, можно потом усложнить или упростить.</li>
+          <li><strong>Цель на год</strong> — задаёшь один раз на целый год (можно потом скорректировать).</li>
           <li><strong>План на неделю</strong> — автоматически от годовой цели, без ручного расчёта.</li>
           <li><strong>Журнал тренировок</strong> — все занятия в одном месте в боте.</li>
           <li><strong>Статистика по месяцам</strong> — наглядный прогресс.</li>
-          <li><strong>План и факт</strong> — видно, как идёте к цели.</li>
+          <li><strong>План и факт</strong> — видно, как идёшь к цели.</li>
           <li><strong>Пересчёт плана</strong> — при пропуске тренировок план обновляется, чтобы к концу года цель оставалась достижимой.</li>
         </ul>
-        <p class="features__summary">В итоге сервис мотивирует к регулярным тренировкам и помогает выработать привычку бегать.</p>
+        <p class="features__summary">👉 Привычка тренироваться регулярно — главное, что ты получаешь от сервиса!</p>
       </div>
     </section>
 
@@ -113,9 +113,9 @@
       <div class="container">
         <h2 class="section__title">Оплата и условия</h2>
         <ul class="payment__list">
-          <li><strong>Оплата</strong> — в боте, картой или через СБП. Автоматических списаний нет.</li>
+          <li><strong>Оплата</strong> — в боте, через СБП или картой. Автоматических списаний нет.</li>
           <li><strong>Доступ</strong> — сразу после оплаты. Услуга оказывается в Telegram-боте.</li>
-          <li><strong>Срок</strong> — на выбранный период (месяц, 3, 6 или 12 месяцев).</li>
+          <li><strong>Срок</strong> — на выбранный период (1, 3, 6 или 12 месяцев).</li>
         </ul>
       </div>
     </section>
