--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <body>
   <header class="header">
     <div class="header__inner">
-      <a href="index.html" class="header__logo">🏃‍♂️‍➡️ Run Goal</a>
-      <p class="header__tagline">Цель на год. План на неделю.</p>
+      <div class="header__brand">
+        <a href="index.html" class="header__logo">🏃‍♂️‍➡️ Run Goal</a>
+        <p class="header__tagline">Цель на год. План на неделю.</p>
+      </div>
       <a href="https://t.me/RunGoalBot" class="btn btn--primary header__cta" target="_blank" rel="noopener">Перейти в бота</a>
     </div>
   </header>
@@ -117,6 +119,19 @@
           <li><strong>Доступ</strong> — сразу после оплаты. Услуга оказывается в Telegram-боте.</li>
           <li><strong>Срок</strong> — на выбранный период (1, 3, 6 или 12 месяцев).</li>
         </ul>
+      </div>
+    </section>
+
+    <section class="section try-now" id="try-now">
+      <div class="container">
+        <h2 class="section__title">Попробовать сейчас</h2>
+        <div class="try-now__row">
+          <img src="images/static-qr-code.png" alt="QR-код для перехода в бота Run Goal" class="try-now__qr" width="160" height="160" loading="lazy">
+          <p class="try-now__text">Регулярный бег укрепляет сердце и сосуды, повышает выносливость и помогает держать вес в норме. Это привычка, которая годами поддерживает здоровье и энергию. Начни с малого — через месяцы заметишь перемены в теле и настроении.</p>
+        </div>
+        <div class="try-now__actions">
+          <a href="https://t.me/RunGoalBot" class="btn btn--primary btn--large" target="_blank" rel="noopener">Мне надо</a>
+        </div>
       </div>
     </section>
 
