--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <main>
     <section class="section how" id="how">
-      <div class="container container--wide">
+      <div class="container">
         <h2 class="section__title">Telegram Mini App для бегунов</h2>
         <ol class="steps">
           <li class="step">
