Тарифы: информация о скидках

--- a/index.html
+++ b/index.html
@@ -91,18 +91,22 @@
           <div class="price-card">
             <h3 class="price-card__period">1 месяц</h3>
             <p class="price-card__price">200 ₽</p>
+            <p class="price-card__benefit">Базовая цена</p>
           </div>
           <div class="price-card">
             <h3 class="price-card__period">3 месяца</h3>
             <p class="price-card__price">590 ₽</p>
+            <p class="price-card__benefit">Скидка 2%</p>
           </div>
           <div class="price-card">
             <h3 class="price-card__period">6 месяцев</h3>
             <p class="price-card__price">1 100 ₽</p>
+            <p class="price-card__benefit">Скидка 8%</p>
           </div>
           <div class="price-card price-card--best">
             <h3 class="price-card__period">12 месяцев</h3>
             <p class="price-card__price">2 000 ₽</p>
+            <p class="price-card__benefit">2 месяца в подарок</p>
           </div>
         </div>
         <p class="pricing__cta-wrap">
