--- a/policy.html
+++ b/policy.html
@@ -11,64 +11,13 @@
     <article class="legal-page">
       <h1 class="legal-page__title">Политика обработки персональных данных</h1>
       <div class="legal__content">
-          <p>Настоящая Политика определяет порядок обработки персональных данных и меры по их защите у Индивидуального предпринимателя Склярова Олега Андреевича (далее — Оператор) в связи с оказанием сервиса Run Goal через Telegram-бота и использованием сайта.</p>
+          <p>Я даю согласие Индивидуальному предпринимателю Склярову Олегу Андреевичу (далее — Оператор) на обработку всех моих персональных данных, указанных при оформлении заказа, любыми способами, в том числе третьими лицами (воспроизведение, электронное копирование, обезличивание, блокирование, уничтожение), а также на обработку иных моих персональных данных в целях, связанных с предложением продуктов Оператора, и на направление мне информации о продуктах и услугах Оператора и/или его контрагентов.</p>
 
-          <ol class="legal-sections">
-            <li>
-              <h3>Общие положения</h3>
-              <ol>
-                <li>Обработка персональных данных осуществляется в соответствии с Федеральным законом от 27.07.2006 № 152-ФЗ «О персональных данных».</li>
-                <li>Оператор: ИП Скляров Олег Андреевич, ОГРНИП: 322527500062225.</li>
-                <li>По вопросам обработки персональных данных можно обратиться к Оператору по контактам, указанным на сайте.</li>
-              </ol>
-            </li>
-            <li>
-              <h3>Цели и правовые основания обработки</h3>
-              <ol>
-                <li>Цели: заключение и исполнение договора оказания услуг (подписка Run Goal), связь с пользователем, учёт обращений.</li>
-                <li>Правовые основания: согласие субъекта персональных данных, исполнение договора, закон.</li>
-              </ol>
-            </li>
-            <li>
-              <h3>Категории обрабатываемых данных</h3>
-              <ol>
-                <li>При использовании бота: идентификатор Telegram (user id), имя пользователя (username), имя в Telegram, текст переписки в рамках оказания услуги, данные, связанные с оплатой (в объёме, передаваемом платёжной системой).</li>
-                <li>При использовании сайта: технические данные (IP, cookie при их использовании), данные, добровольно указанные в формах обратной связи (если такие будут).</li>
-              </ol>
-            </li>
-            <li>
-              <h3>Способы дачи согласия</h3>
-              <ol>
-                <li>Использование Telegram-бота @RunGoalBot и отправка сообщений боту означают согласие на обработку персональных данных в объёме, необходимом для оказания услуги.</li>
-                <li>Использование сайта с переходом по ссылкам и ознакомлением с материалами может сопровождаться сбором технических данных; продолжение использования сайта рассматривается как согласие на обработку таких данных в соответствии с настоящей Политикой.</li>
-                <li>Согласие даётся добровольно. Предоставление данных необходимо для заключения и исполнения договора; при отказе оказание услуги может быть невозможно.</li>
-              </ol>
-            </li>
-            <li>
-              <h3>Права субъекта персональных данных</h3>
-              <ol>
-                <li>Субъект вправе получать информацию об обработке своих данных, требовать уточнения, блокирования или уничтожения данных при условии, что обработка осуществлялась с нарушением закона, а также отозвать согласие на обработку.</li>
-                <li>Обращение направляется Оператору в письменной форме (в т.ч. по электронной почте или через мессенджер по контактам на сайте). Оператор рассматривает обращение в срок до 30 дней.</li>
-              </ol>
-            </li>
-            <li>
-              <h3>Хранение и защита данных</h3>
-              <ol>
-                <li>Персональные данные хранятся в течение срока, необходимого для целей обработки, и в соответствии с требованиями законодательства.</li>
-                <li>Оператор принимает организационные и технические меры для защиты персональных данных от неправомерного доступа, уничтожения, изменения, блокирования, копирования, распространения.</li>
-              </ol>
-            </li>
-            <li>
-              <h3>Передача данных</h3>
-              <ol>
-                <li>Персональные данные могут передаваться платёжным системам и иным лицам только в объёме, необходимом для исполнения договора и по закону. Передача данных за пределы РФ осуществляется в соответствии с законодательством РФ.</li>
-              </ol>
-            </li>
-            <li>
-              <h3>Контакты</h3>
-              <p>По вопросам обработки персональных данных: ИП Скляров Олег Андреевич, реквизиты указаны на сайте.</p>
-            </li>
-          </ol>
+          <p>Согласие дано на срок 5 лет. При отзыве согласия обработка персональных данных должна быть прекращена Оператором и/или третьими лицами, данные уничтожены при расторжении договора, но не позднее 1 года с даты прекращения действия договора.</p>
+
+          <p>Я даю согласие на получение от Оператора рекламы и рассылок, в том числе по сети подвижной радиотелефонной связи.</p>
+
+          <p><strong>Оператор:</strong> ИП Скляров Олег Андреевич, ОГРНИП: 322527500062225, ИНН: 526222945917.</p>
       </div>
     </article>
   </main>
