--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🏃‍♂️‍➡️ Run Goal — цель на год, план на неделю</title>
+  <title>Run Goal — цель на год, план на неделю</title>
   <meta name="description" content="Telegram-бот для бегунов: ставь годовую цель, веди журнал тренировок, получай план на неделю и достигай цели к концу года.">
+  <link rel="canonical" href="https://run-goal.olegsklyarov.ru/">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://run-goal.olegsklyarov.ru/">
+  <meta property="og:title" content="Run Goal — цель на год, план на неделю">
+  <meta property="og:description" content="Telegram-бот для бегунов: ставь годовую цель, веди журнал тренировок, получай план на неделю и достигай цели к концу года.">
+  <meta property="og:image" content="https://run-goal.olegsklyarov.ru/images/og-preview.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:locale" content="ru_RU">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Run Goal — цель на год, план на неделю">
+  <meta name="twitter:description" content="Telegram-бот для бегунов: ставь годовую цель, веди журнал тренировок, получай план на неделю и достигай цели к концу года.">
+  <meta name="twitter:image" content="https://run-goal.olegsklyarov.ru/images/og-preview.png">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,21 +34,21 @@
   <main>
     <section class="section how" id="how">
       <div class="container">
-        <h2 class="section__title">Telegram Mini App для бегунов</h2>
+        <h1 class="section__title">Telegram Mini App для бегунов</h1>
         <ol class="steps">
           <li class="step">
             <span class="step__num">1</span>
-            <h3 class="step__title">Запусти бота <a href="https://t.me/RunGoalBot" target="_blank" rel="noopener">@RunGoalBot</a></h3>
+            <h2 class="step__title">Запусти бота <a href="https://t.me/RunGoalBot" target="_blank" rel="noopener">@RunGoalBot</a></h2>
             <p class="step__text">Если у тебя есть Telegram, дополнительная регистрация не нужна.</p>
           </li>
           <li class="step">
             <span class="step__num">2</span>
-            <h3 class="step__title">Поставь цель</h3>
+            <h2 class="step__title">Поставь цель</h2>
             <p class="step__text">Укажи годовую цель в километрах. Например для регулярного участия в массовом забеге на 10 км я ставлю годовую цель 600 км.</p>
           </li>
           <li class="step">
             <span class="step__num">3</span>
-            <h3 class="step__title">Вноси тренировки и следи за прогрессом</h3>
+            <h2 class="step__title">Вноси тренировки и следи за прогрессом</h2>
             <p class="step__text">Отмечай выполненное в боте. При срывах план пересчитается так, чтобы к концу года всё равно прийти к цели.</p>
           </li>
         </ol>
@@ -85,26 +98,26 @@
         <h2 class="section__title">Тарифы</h2>
         <p class="pricing__trial">Есть бесплатный пробный период. После него для продолжения нужна подписка.</p>
         <div class="pricing__grid">
-          <div class="price-card">
+          <article class="price-card">
             <h3 class="price-card__period">1 месяц</h3>
             <p class="price-card__price">200 ₽</p>
             <p class="price-card__benefit">Базовая цена</p>
-          </div>
-          <div class="price-card">
+          </article>
+          <article class="price-card">
             <h3 class="price-card__period">3 месяца</h3>
             <p class="price-card__price">590 ₽</p>
             <p class="price-card__benefit">Скидка 2%</p>
-          </div>
-          <div class="price-card">
+          </article>
+          <article class="price-card">
             <h3 class="price-card__period">6 месяцев</h3>
             <p class="price-card__price">1 100 ₽</p>
             <p class="price-card__benefit">Скидка 8%</p>
-          </div>
-          <div class="price-card price-card--best">
+          </article>
+          <article class="price-card price-card--best">
             <h3 class="price-card__period">12 месяцев</h3>
             <p class="price-card__price">2 000 ₽</p>
             <p class="price-card__benefit">2 месяца в подарок</p>
-          </div>
+          </article>
         </div>
         <p class="pricing__cta-wrap">
           <a href="https://t.me/RunGoalBot" class="btn btn--primary" target="_blank" rel="noopener">Выбрать тариф в боте</a>
@@ -140,9 +153,11 @@
 
   <footer class="footer">
     <div class="footer__inner">
-      <p class="footer__name">ИП Скляров Олег Андреевич</p>
-      <p class="footer__detail">ОГРНИП: 322527500062225</p>
-      <p class="footer__detail">ИНН: 526222945917</p>
+      <address class="footer__address">
+        <p class="footer__name">ИП Скляров Олег Андреевич</p>
+        <p class="footer__detail">ОГРНИП: 322527500062225</p>
+        <p class="footer__detail">ИНН: 526222945917</p>
+      </address>
       <nav class="legal-links footer__links">
         <a href="oferta.html">Оферта</a>
         <a href="policy.html">Политика конфиденциальности</a>
