favicon with some fixes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <meta name="twitter:title" content="Run Goal — цель на год, план на неделю">
   <meta name="twitter:description" content="Telegram-бот для бегунов: ставь годовую цель, веди журнал тренировок, получай план на неделю и достигай цели к концу года.">
   <meta name="twitter:image" content="https://run-goal.olegsklyarov.ru/images/og-preview.png">
+  <link rel="icon" href="favicon.webp" type="image/webp">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -89,7 +90,7 @@
           <li><strong>План и факт</strong> — видно, как идёшь к цели.</li>
           <li><strong>Пересчёт плана</strong> — при пропуске тренировок план обновляется, чтобы к концу года цель оставалась достижимой.</li>
         </ul>
-        <p class="features__summary">👉 Привычка тренироваться регулярно — главное, что ты получаешь от сервиса!</p>
+        <p class="features__summary">👉 Привычка тренироваться регулярно&nbsp;— главное, что ты получаешь от сервиса!</p>
       </div>
     </section>
 
